--- a/particle_dark/index.html
+++ b/particle_dark/index.html
@@ -204,14 +204,12 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                                 <div class="sweep-layer">
                                     <div class="sweep-content">
 
-                                        <div class="sweep-icon">
-                                          <a href="cartographie.html">
-                                                <i class="fa fa-location-arrow" aria-hidden="true"></i>
-                                            </a>
-                                        </div>
+
                                         <h3><a href="cartographie.html">Cartographie interactive</a></h3>
                                         <p>Plongez vos visiteurs dans votre univers</p>
-                                        <a href="cartographie.html">Cliquez pour en savoir plus !</a>
+                                        <a href="cartographie.html">
+                                        <button class="btn btn-default page-scroll wow fadeInRight hvr-sweep-to-right animated">En savoir plus</button>
+                                      </a>
                                     </div>
                                 </div>
                             </div>
@@ -220,7 +218,27 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                     <!-- /.portfolio-img -->
                 </div>
                 <!-- /.col-md-3 -->
+                <div class="col-md-3 col-sm-6 col-xs-6">
+                    <div class="portfolio-img third" onClick="window.location.href='file-dattente.html';">
+                        <img class="img-responsive" src="assets/images/attente-icon.png"
+                             alt="porftofilio thumbnail">
+                        <div class="sweep-left"></div>
+                        <div class="sweep-from-center">
+                            <div class="sweep-layer">
+                                <div class="sweep-content">
 
+                                    <h3><a href="file-dattente.html">File d'attente numérique</a></h3>
+                                    <p>La révolution de l'attente est en marche</p>
+                                    <a href="file-dattente.html">
+                                    <button class="btn btn-default page-scroll wow fadeInRight hvr-sweep-to-right animated">En savoir plus</button>
+                                  </a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="sweep-right"></div>
+                    </div>
+                    <!-- /.portfolio-img -->
+                </div>
 
                 <div class="col-md-3 col-sm-6 col-xs-6">
                     <div class="portfolio-img second" onClick="window.location.href='fidelisation.html';">
@@ -231,14 +249,12 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                                 <div class="sweep-layer">
                                     <div class="sweep-content">
 
-                                        <div class="sweep-icon">
-                                          <a href="fidelisation.html">
-                                                <i class="fa fa-smile-o" aria-hidden="true"></i>
-                                            </a>
-                                        </div>
-                                        <h3><a href="fidelisation.html">Fidélisation client</a></h3>
-                                        <p>Mise en place d'outils de communication digitale</p>
-                                        <a href="fidelisation.html">Cliquez pour en savoir plus !</a>
+
+                                        <h3><a href="fidelisation.html">Parcours intelligents</a></h3>
+                                        <p>Orientez vos visiteurs dans votre direction</p>
+                                        <a href="offres.html">
+                                        <button class="btn btn-default page-scroll wow fadeInRight hvr-sweep-to-right animated">En savoir plus</button>
+                                      </a>
                                     </div>
                                 </div>
                             </div>
@@ -248,29 +264,7 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                 </div>
                 <!-- /.col-md-3 -->
 
-                <div class="col-md-3 col-sm-6 col-xs-6">
-                    <div class="portfolio-img third" onClick="window.location.href='file-dattente.html';">
-                        <img class="img-responsive" src="assets/images/attente-icon.png"
-                             alt="porftofilio thumbnail">
-                        <div class="sweep-left"></div>
-                        <div class="sweep-from-center">
-                            <div class="sweep-layer">
-                                <div class="sweep-content">
-                                    <div class="sweep-icon">
-                                        <a href="file-dattente.html">
-                                            <i class="fa fa-mobile" aria-hidden="true"></i>
-                                        </a>
-                                    </div>
-                                    <h3><a href="file-dattente.html">File d'attente numérique</a></h3>
-                                    <p>La révolution de l'attente est en marche</p>
-                                    <a href="file-dattente.html">Cliquez pour en savoir plus !</a>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="sweep-right"></div>
-                    </div>
-                    <!-- /.portfolio-img -->
-                </div>
+
                 <!-- /.col-md-3 -->
 
                 <div class="col-md-3 col-sm-6 col-xs-6">
@@ -281,14 +275,12 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                         <div class="sweep-from-center">
                             <div class="sweep-layer">
                                 <div class="sweep-content">
-                                    <div class="sweep-icon">
-                                        <a href="communication.html">
-                                            <i class="fa fa-bullhorn" aria-hidden="true"></i>
-                                        </a>
-                                    </div>
-                                    <h3><a href="communication.html">Communication éclair</a></h3>
+
+                                    <h3><a href="communication.html">Fidélisation et Communication éclair</a></h3>
                                     <p>Notifiez vos clients sans frais</p>
-                                    <a href="communication.html">Cliquez pour en savoir plus !</a>
+                                    <a href="offres.html">
+                                    <button class="btn btn-default page-scroll wow fadeInRight hvr-sweep-to-right animated">En savoir plus</button>
+                                  </a>
                                 </div>
                             </div>
                         </div>
