--- a/particle_dark/index.html
+++ b/particle_dark/index.html
@@ -481,7 +481,7 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
 
                     </div>
                     <div class="info-text wow fadeIn animated">
-                        <p>La puissance digital au service de votre business</p>
+                        <p>La puissance digitale au service de votre business</p>
                     </div>
                     <a href="offres.html">
                       <button class="btn btn-default page-scroll wow fadeInRight hvr-sweep-to-right animated" href="offres.html">En savoir plus</button>
