--- a/particle_dark/index.html
+++ b/particle_dark/index.html
@@ -190,7 +190,7 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
         <div class="row">
 
             <div class="col-md-12 see-work">
-                <h2 class="wow fadeInLeft animated">Outils <span>sur-mesure</span> pour votre activité</h2>
+                <h2 class="wow fadeInLeft animated">Nos outils <span>sur-mesure</span> pour votre activité</h2>
             </div>
             <!-- /.see-work -->
 
