--- a/particle_dark/index.html
+++ b/particle_dark/index.html
@@ -251,8 +251,8 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
 
 
                                         <h3><a href="fidelisation.html">Parcours intelligents</a></h3>
-                                        <p>Orientez vos visiteurs dans votre direction</p>
-                                        <a href="offres.html">
+                                        <p>Orientez vos visiteurs dans votre espace</p>
+                                        <a href="cartographie.html">
                                         <button class="btn btn-default page-scroll wow fadeInRight hvr-sweep-to-right animated">En savoir plus</button>
                                       </a>
                                     </div>
@@ -541,7 +541,7 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
 
             <div class="col-md-12">
 
-              
+
                 <!-- /.contact-headline -->
 
                 <div class="contact-content">
