--- a/particle_dark/offres.html
+++ b/particle_dark/offres.html
@@ -299,17 +299,7 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
 
             <!-- .service-content -->
           </div>
-          <div class="col-md-12 service-headline offres">
-            <p class="wow fadeIn animated">
-              Pour toutes confections sur-mesure, <a class= "page-scroll" href="#contact">
-                contactez-nous
-                </a>
-              </p>
-            <br>
-              <p>
-              Nous établierons ensemble votre stratégie digitale.
-            </p>
-          </div>
+        
 
         <!-- /.row -->
     </div>
@@ -324,6 +314,29 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
           </div>
 </section>
 
+<section id="call-to" class="call-to-section">
+
+    <div class="call-to-layer"></div>
+
+    <div class="container">
+
+        <div class="row">
+
+            <div class="col-md-12">
+                <h3 class="wow fadeIn animated">Ouvrez les perspectives d'une expérience sur-mesure</h3>
+                <h3 class="wow fadeIn animated">Nous établierons ensemble votre stratégie digitale</h3>
+                <a class= "page-scroll" href="#contact">
+                <button class="btn btn-default page-scroll wow fadeInRight hvr-sweep-to-right animated" href="#contact">Contactez-nous</button>
+                </a>
+
+
+            </div>
+            <!-- /.col-md-12 -->
+        </div>
+        <!-- /.row -->
+    </div>
+    <!-- /.container -->
+</section>
 <!-- Contact Section
 ================================================== -->
 <section id="contact" class="contact-section">
@@ -333,7 +346,7 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
 
             <div class="col-md-12">
 
-                
+
                 <!-- /.contact-headline -->
 
                 <div class="contact-content">
