page carto parcours

--- a/particle_dark/cartographie.html
+++ b/particle_dark/cartographie.html
@@ -166,6 +166,76 @@
                         </div>
                     </div>
                     <br><br>
+
+                </div>
+            </div>
+            <!-- .service-content -->
+        </div>
+        <!-- /.row -->
+    </div>
+    <!-- /.container -->
+</section>
+
+<section id="call-to" class="call-to-section">
+
+    <div class="call-to-layer"></div>
+
+    <div class="container">
+
+        <div class="row">
+
+            <div class="col-md-12">
+                <h3 class="wow fadeIn animated">Mettez votre plan au service de vos visiteurs</h3>
+                <a class= "page-scroll" href="#contact">
+                <button class="btn btn-default page-scroll wow fadeInRight hvr-sweep-to-right animated" href="#contact">Contactez-nous</button>
+                </a>
+            </div>
+            <!-- /.col-md-12 -->
+        </div>
+        <!-- /.row -->
+    </div>
+    <!-- /.container -->
+</section>
+<!-- /.service-section -->
+<section id="service-details" class="services-section">
+
+    <div class="container">
+
+        <div class="row">
+
+            <div class="col-md-12 service-headline">
+                <h2 class="wow fadeIn animated"> Orientez <span> vos visiteurs</span> dans <span> votre espace !</span></h2>
+                <p class="wow fadeIn animated">
+                  Fournissez des itinéraires intélligents, qui s'adaptent à la localisation de vos clients
+                </p>
+            </div>
+            <!-- /.service-headline -->
+
+            <div class="col-md-12 service-content">
+                <div class="service-image">
+                    <img src="assets/images/ipad-parcours.png" alt="iphone" id='carto-phone'>
+                </div>
+                <div class="right">
+                    <div class="service-2 wow fadeIn animated">
+                        <div class="icons">
+                            <i class="material-icons">account_balance</i>
+                        </div>
+                        <div class="text">
+                            <h4>Mise en Valeur des lieux</h4>
+                            <p>Les lieux du plan sont en interaction avec vos visiteurs.</p>
+                        </div>
+                        <br><br>
+                    </div>
+                    <div class="service-2 wow fadeIn animated">
+                        <div class="icons">
+                            <i class="material-icons">perm_device_information</i>
+                        </div>
+                        <div class="text">
+                            <h4>Informations en temps réel</h4>
+                            <p>Vos notifications en fonction de la géolocalisation de vos visiteurs. (Geofencing)</p>
+                        </div>
+                    </div>
+                    <br><br>
                     <div class="service-2 wow fadeIn animated">
                         <div class="icons">
                             <i class="material-icons">directions_walk</i>
@@ -184,8 +254,6 @@
     </div>
     <!-- /.container -->
 </section>
-<!-- /.service-section -->
-
 <!-- Contact Section
 ================================================== -->
 <section id="contact" class="contact-section">
