--- a/particle_dark/cartographie.html
+++ b/particle_dark/cartographie.html
@@ -221,7 +221,7 @@
                             <i class="material-icons">account_balance</i>
                         </div>
                         <div class="text">
-                            <h4>Mise en Valeur des lieux</h4>
+                            <h4>Mise en valeur des lieux</h4>
                             <p>Les lieux du plan sont en interaction avec vos visiteurs.</p>
                         </div>
                         <br><br>
@@ -243,7 +243,7 @@
                         <div class="text">
                             <h4>Itinéraires intelligents</h4>
                             <p>Possibilité de rechercher un endroit sur la carte et de faire apparaitre
-                              un itinéraire géolocalisé directement sur votre plan.</p>
+                              un itinéraire géolocalisé sur votre plan numérique.</p>
                         </div>
                     </div>
                 </div>
