--- a/particle_dark/index.html
+++ b/particle_dark/index.html
@@ -241,7 +241,7 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                 </div>
 
                 <div class="col-md-3 col-sm-6 col-xs-6">
-                    <div class="portfolio-img second" onClick="window.location.href='fidelisation.html';">
+                    <div class="portfolio-img second" onClick="window.location.href='cartographie.html';">
                             <img class="img-responsive" src="assets/images/parcours-icon.png"
                                  alt="porftofilio thumbnail"/>
                             <div class="sweep-left"></div>
@@ -250,7 +250,7 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                                     <div class="sweep-content">
 
 
-                                        <h3><a href="fidelisation.html">Parcours intelligents</a></h3>
+                                        <h3><a href="cartographie.html">Parcours intelligents</a></h3>
                                         <p>Orientez vos visiteurs dans votre espace</p>
                                         <a href="cartographie.html">
                                         <button class="btn btn-default page-scroll wow fadeInRight hvr-sweep-to-right animated">En savoir plus</button>
@@ -278,7 +278,7 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
 
                                     <h3><a href="communication.html">Fidélisation et Communication éclair</a></h3>
                                     <p>Notifiez vos clients sans frais</p>
-                                    <a href="offres.html">
+                                    <a href="communication.html">
                                     <button class="btn btn-default page-scroll wow fadeInRight hvr-sweep-to-right animated">En savoir plus</button>
                                   </a>
                                 </div>
