--- a/particle_dark/index.html
+++ b/particle_dark/index.html
@@ -117,7 +117,7 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                     <span class="skilltechtypetext"></span>
                 </div>
                 <div class="service-item-read-more">
-                        <a href="#three-points" class="arrow-down page-scroll">
+                        <a href="#big-image" class="arrow-down page-scroll">
                             <i class="fa fa-angle-down bounce" aria-hidden="true"></i>
                         </a>
                 </div>
