--- a/particle_dark/offres.html
+++ b/particle_dark/offres.html
@@ -82,7 +82,7 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
 
 <!-- Services Section
 ================================================== -->
-<section id="services" class="services-section" style="padding-top: 0;">
+<section id="services" class="services-section" style="padding-top: 17em;">
 
     <div class="container">
             <!-- /.service-headline -->
@@ -299,7 +299,7 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
 
             <!-- .service-content -->
           </div>
-        
+
 
         <!-- /.row -->
     </div>
