--- a/particle_dark/communication.html
+++ b/particle_dark/communication.html
@@ -140,7 +140,7 @@
             <div class="col-lg-12">
 
                 <div class="about-text">
-                    <h2 class="wow fadeIn animated">Un nouveau canal de communicaion, les <span>notifications push</span></h2><br/><br>
+                    <h2 class="wow fadeIn animated">Un nouveau canal de communication, les <span>notifications push</span></h2><br/><br>
                       <p class="wow fadeIn animated">
                               Statistique constatée :<br/>
                       </p>
