--- a/particle_dark/index.html
+++ b/particle_dark/index.html
@@ -142,7 +142,7 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                     <br>
                     <br>
                     <h3 class="wow fadeIn animated">
-                        Nous créons <span> vos plateformes </span> et <span> la visibilité </span> dont vous avez besoin
+                        Nous créons des <span> plateformes web et mobiles </span> avec la <span> visibilité </span> dont vous avez besoin
                     </h3>
                     <br>
                     <br>
@@ -190,7 +190,7 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
         <div class="row">
 
             <div class="col-md-12 see-work">
-                <h2 class="wow fadeInLeft animated">Nos outils <span>sur-mesure</span> pour votre activité</h2>
+                <h2 class="wow fadeInLeft animated">Découvrez nos outils <span>sur-mesure</span> </h2>
             </div>
             <!-- /.see-work -->
 
