--- a/particle_dark/index.html
+++ b/particle_dark/index.html
@@ -206,7 +206,7 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
 
 
                                         <h3><a href="cartographie.html">Cartographie interactive</a></h3>
-                                        <p>Plongez vos visiteurs dans votre univers</p>
+                                        <p>Les visiteus en immersion dans votre univers</p>
                                         <a href="cartographie.html">
                                         <button class="btn btn-default page-scroll wow fadeInRight hvr-sweep-to-right animated">En savoir plus</button>
                                       </a>
@@ -227,8 +227,8 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                             <div class="sweep-layer">
                                 <div class="sweep-content">
 
-                                    <h3><a href="file-dattente.html">File d'attente numérique</a></h3>
-                                    <p>La révolution de l'attente est en marche</p>
+                                    <h3><a href="file-dattente.html">Attente numérisée</a></h3>
+                                    <p>La révolution de la file d'attente est en marche</p>
                                     <a href="file-dattente.html">
                                     <button class="btn btn-default page-scroll wow fadeInRight hvr-sweep-to-right animated">En savoir plus</button>
                                   </a>
@@ -250,8 +250,8 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                                     <div class="sweep-content">
 
 
-                                        <h3><a href="cartographie.html">Parcours intelligents</a></h3>
-                                        <p>Orientez vos visiteurs dans votre espace</p>
+                                        <h3><a href="cartographie.html">Orientation sur-mesure</a></h3>
+                                        <p>Le visiteur personnalise son parcours en fonction de ses envies</p>
                                         <a href="cartographie.html">
                                         <button class="btn btn-default page-scroll wow fadeInRight hvr-sweep-to-right animated">En savoir plus</button>
                                       </a>
@@ -277,7 +277,7 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                                 <div class="sweep-content">
 
                                     <h3><a href="communication.html">Fidélisation et Communication éclair</a></h3>
-                                    <p>Notifiez vos clients sans frais</p>
+                                    <p>La puissance du E-marketing pour vos clients</p>
                                     <a href="communication.html">
                                     <button class="btn btn-default page-scroll wow fadeInRight hvr-sweep-to-right animated">En savoir plus</button>
                                   </a>
