--- a/particle_dark/index.html
+++ b/particle_dark/index.html
@@ -421,16 +421,12 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
 
 
             <div class="col-md-12 service-headline">
-                <h2 class="wow fadeIn animated">Des <span>expériences</span> digitales</h2>
+                <h2 class="wow fadeIn animated">Nos <span>offres</span></h2>
 
 
             </div>
 
-            <div class="col-md-12 service-content">
 
-                <h4 class="wow fadeIn animated">Nos offres adaptées</h4>
-
-            </div>
 
             <div class="col-lg-12 service-content">
               <div class="row">
@@ -444,7 +440,7 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
 
                     </div>
                     <div class="info-text wow fadeIn animated">
-                        <p>Designez la visibilité de vos plateformes </p>
+                        <p>Visibilité web et mobile pour votre activité</p>
 
                     </div>
                     <a href="offres.html">
@@ -463,7 +459,7 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
 
                     </div>
                     <div class="info-text wow fadeIn animated">
-                        <p>Faites vivre une nouvelle expérience à vos visiteurs</p>
+                        <p>Expérience client unique et adaptée</p>
                     </div>
                     <a href="offres.html">
                       <button class="btn btn-default page-scroll wow fadeInRight hvr-sweep-to-right animated" href="offres.html">En savoir plus</button>
@@ -481,7 +477,7 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
 
                     </div>
                     <div class="info-text wow fadeIn animated">
-                        <p>La puissance digitale au service de votre business</p>
+                        <p>Le meilleur du E-marketing au service de votre business</p>
                     </div>
                     <a href="offres.html">
                       <button class="btn btn-default page-scroll wow fadeInRight hvr-sweep-to-right animated" href="offres.html">En savoir plus</button>
