--- a/particle_dark/index.html
+++ b/particle_dark/index.html
@@ -368,7 +368,7 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                     </div>
                 </div>
                 <div class="service-image">
-                    <img src="assets/images/iphone6.png" alt="iphone">
+                    <img src="assets/images/joconde-dessin.png" alt="iphone">
                 </div>
                 <div class="right">
                     <br>
