--- a/particle_dark/index.html
+++ b/particle_dark/index.html
@@ -350,7 +350,7 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                             <p>Outils adaptés à tous les supports.</p>
                         </div>
                         <div class="icons">
-                            <i class="material-icons">important_devices</i>
+                            <img src="assets/images/icon-responsive.png" alt="iphone">
                         </div>
                     </div>
                     <br>
@@ -363,7 +363,7 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                             <p>Référencement naturel ou payant pour une notoriété améliorée.</p>
                         </div>
                         <div class="icons">
-                            <i class="material-icons">visibility</i>
+                            <img src="assets/images/icon-view.png" alt="iphone">
                         </div>
                     </div>
                 </div>
@@ -374,7 +374,7 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                     <br>
                     <div class="service-2" style="visibility: hidden;" id="service3">
                         <div class="icons">
-                            <i class="material-icons">mood</i>
+                            <img src="assets/images/icon-happy.png" alt="iphone">
                         </div>
                         <div class="text">
                             <h4>Expérience Utilisateur</h4>
@@ -388,7 +388,7 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                     <br>
                     <div class="service-2" style="visibility: hidden;" id="service4">
                         <div class="icons">
-                            <i class="material-icons">trending_up</i>
+                            <img src="assets/images/icon-business.png" alt="iphone">
                         </div>
                         <div class="text">
                             <h4>Orienté Business</h4>
@@ -409,7 +409,28 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
 
 <!-- Image Section
 ================================================== -->
-<section id="big-image" class="image-service"></section>
+<section id="big-image" class="image-service">
+  <div class="container-fluid">
+
+      <div class="row">
+
+          <div class="col-md-12 service-bottom">
+              <div class="container">
+                  <br>
+                  <br>
+                  <h3 class="wow fadeIn animated">
+                      "Don’t be afraid to <span>get creative</span> and <span>experiment</span> with your marketing."
+                  </h3>
+                  <p class="wow fadeIn animated">Mike Volpe</p>
+                  <br>
+                  <br>
+              </div>
+          </div>
+          <!-- /.quote-bottom -->
+      </div>
+      <!-- /.row -->
+  </div>
+</section>
 <!-- /.image section -->
 
 <!-- Services Section
