--- a/particle_dark/index.html
+++ b/particle_dark/index.html
@@ -410,7 +410,7 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
 <!-- Image Section
 ================================================== -->
 <section id="big-image" class="image-service">
-  <div class="container-fluid">
+  <div class="container-fluid" style="margin-top: 16em;">
 
       <div class="row">
 
