--- a/particle_dark/index.html
+++ b/particle_dark/index.html
@@ -419,9 +419,9 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                   <br>
                   <br>
                   <h3 class="wow fadeIn animated">
-                      "Don’t be afraid to <span>get creative</span> and <span>experiment</span> with your marketing."
+                      "Le design, c’est la <span>créativité</span> associée à la <span>stratégie</span>."
                   </h3>
-                  <p class="wow fadeIn animated">Mike Volpe</p>
+                  <p class="wow fadeIn animated">Rob Curedale</p>
                   <br>
                   <br>
               </div>
