--- a/particle_dark/file-dattente.html
+++ b/particle_dark/file-dattente.html
@@ -243,7 +243,7 @@
                 </div>
                 <div class="service-image">
                     <img src="assets/images/iphone6_3.png" alt="iphone"><br><br>
-                    <p>Le client est avertit lorsque que son approche.</p>
+                    <p>Le client est avertit lorsque que son tour approche.</p>
                 </div>
             </div>
             <!-- .service-content -->
