--- a/particle_dark/index.html
+++ b/particle_dark/index.html
@@ -701,7 +701,7 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
 <script src="assets/js/libraries/jquery.counterup.js"></script>
 <!-- Custom Particle Theme JavaScript -->
 <script>
-    var sentences = ["Vivons des aventures <span class='orange'>digitales<span>"];
+    var sentences = ["Créateurs <span class='orange'> d'aventures digitales<span>"];
 </script>
 <script src="assets/js/custom/particle-theme-light-yt.js"></script>
 </body>
