--- a/particle_dark/index.html
+++ b/particle_dark/index.html
@@ -357,8 +357,8 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                     <br>
                     <div class="service" style="visibility: hidden;" id="service1">
                         <div class="text">
-                            <h4>Responsive Design</h4>
-                            <p>Outils adaptés à tous les supports.</p>
+                            <h4>Des outils adaptés à tous vos supports</h4>
+
                         </div>
                         <div class="icons">
                             <img src="assets/images/icon-responsive.png" alt="iphone">
@@ -370,8 +370,8 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                     <br>
                     <div class="service" style="visibility: hidden;" id="service2">
                         <div class="text">
-                            <h4>Une visibilité améliorée</h4>
-                            <p>Référencement naturel ou payant pour une notoriété améliorée.</p>
+                            <h4>Référencement naturel pour une notoriété améliorée</h4>
+
                         </div>
                         <div class="icons">
                             <img src="assets/images/icon-view.png" alt="iphone">
@@ -385,12 +385,12 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                     <br>
                     <div class="service-2" style="visibility: hidden;" id="service3">
                         <div class="icons">
-                            <img src="assets/images/icon-happy.png" alt="iphone">
+                            <img src="assets/images/icon-like.png" alt="iphone">
                         </div>
                         <div class="text">
-                            <h4>Expérience Utilisateur</h4>
-                            <p>Des fonctionnalités concues pour vous et vos clients.
-                               (billeterie, cartographie, file d'attente numérique)</p>
+                            <h4>Des fonctionnalités concues pour vous et vos clients</h4>
+
+
                             <br>
                         </div>
                         <br>
@@ -402,10 +402,9 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                             <img src="assets/images/icon-business.png" alt="iphone">
                         </div>
                         <div class="text">
-                            <h4>Orienté Business</h4>
-                            <p>Des outils de statistiques et de prévisions de
-                              votre chiffre d'affaires, gestion de relances clients,
-                                newsletters automatisées, envois ciblés.</p>
+                            <h4>Des outils orientés business de gestion et de relances clients</h4>
+
+
                         </div>
                     </div>
                 </div>
