--- a/particle_dark/index.html
+++ b/particle_dark/index.html
@@ -474,9 +474,11 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                         <p>Visibilité web et mobile pour votre activité</p>
 
                     </div>
-                    <a href="offres.html">
-                    <button class="btn btn-default page-scroll wow fadeInRight hvr-sweep-to-right animated" href="offres.html">En savoir plus</button>
-                  </a>
+                    <div class="info-text wow fadeIn animated">
+                        <a href="offres.html">
+                            <button class="btn btn-default page-scroll wow fadeInRight hvr-sweep-to-right animated" href="offres.html">En savoir plus</button>
+                        </a>
+                    </div>
 
                 </div>
             </div>
@@ -492,9 +494,11 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                     <div class="info-text wow fadeIn animated">
                         <p>Expérience client unique et adaptée</p>
                     </div>
-                    <a href="offres.html">
-                      <button class="btn btn-default page-scroll wow fadeInRight hvr-sweep-to-right animated" href="offres.html">En savoir plus</button>
-                    </a>
+                    <div class="info-text wow fadeIn animated">
+                        <a href="offres.html">
+                          <button class="btn btn-default page-scroll wow fadeInRight hvr-sweep-to-right animated" href="offres.html">En savoir plus</button>
+                        </a>
+                    </div>
                 </div>
 
             </div>
@@ -510,9 +514,11 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                     <div class="info-text wow fadeIn animated">
                         <p>Le meilleur du E-marketing au service de votre business</p>
                     </div>
-                    <a href="offres.html">
-                      <button class="btn btn-default page-scroll wow fadeInRight hvr-sweep-to-right animated" href="offres.html">En savoir plus</button>
-                    </a>
+                    <div class="info-text wow fadeIn animated">
+                        <a href="offres.html">
+                          <button class="btn btn-default page-scroll wow fadeInRight hvr-sweep-to-right animated" href="offres.html">En savoir plus</button>
+                        </a>
+                    </div>
                 </div>
 
             </div>
