--- a/particle_dark/index.html
+++ b/particle_dark/index.html
@@ -145,11 +145,10 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
 ================================================== -->
 <section id="big-image" class="image-section"
          style='background: url(./assets/images/image-section.jpg) no-repeat 50% 50% fixed;
-                height: 38em;
                 border-top: 20px solid black;
                 border-bottom: 10px solid black;
                 '>
-    <div class="container-right" style='width: 45%; float: right; margin-right: 3em;'>
+    <div class="container-right" style='float: right; margin-right: 3em;'>
                     <br>
                     <br>
                     <h3 class="wow fadeIn animated">
@@ -162,11 +161,10 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
 
 <section id="big-image" class="image-section"
          style='background: url(./assets/images/layer-2.png) no-repeat 50% 50% fixed;
-                height: 38em;
                 border-top: 10px solid black;
                 border-bottom: 10px solid black;
                 '>
-    <div class="container-left" style='width: 45%; float: left; margin-left: 3em;'>
+    <div class="container-left" style='float: left; margin-left: 3em;'>
                     <br>
                     <br>
                     <h3 class="wow fadeIn animated">
@@ -179,10 +177,9 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
 
 <section id="big-image" class="image-section"
          style='background: url(./assets/images/layer-3.png) no-repeat 50% 50% fixed;
-                height: 38em;
                 border-top: 10px solid black;
                 '>
-    <div class="container-right" style='width: 45%; float: right; margin-right: 3em;'>
+    <div class="container-right" style='float: right; margin-right: 3em;'>
                     <br>
                     <br>
                     <h3 class="wow fadeIn animated">
@@ -446,18 +443,10 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
 <!-- Services Section
 ================================================== -->
 <section id="offres" class="services-section">
-
     <div class="container">
-
-
-
             <div class="col-md-12 service-headline">
                 <h2 class="wow fadeIn animated">Nos <span>offres</span></h2>
-
-
             </div>
-
-
 
             <div class="col-lg-12 service-content">
               <div class="row">
@@ -533,13 +522,6 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
     <!-- /.container -->
 </section>
 <!-- /.service-section -->
-
-<section id="offres-alt" class="services-section">
-    <div class="col-md-12 service-headline">
-            <p class="wow fadeIn animated">
-              Pour consulter nos offres, rendez-vous sur un écran plus large !</p>
-          </div>
-</section>
 
 <!-- Call To Action Section
 ================================================== -->
