--- a/particle_dark/index.html
+++ b/particle_dark/index.html
@@ -112,8 +112,9 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
     <!-- /.video-overlay -->
     <div class="hero-video">
         <video autoplay loop poster="assets/video/1_caroussel.jpg" id="bgvid">
-          <!--  <source src="assets/video/particle-video-v1-light.webm" type="video/webm"> -->
-            <source src="assets/video/sequence1.mp4" type="video/mp4">
+            <source src="assets/video/caroussel.webm" type="video/webm">
+            <source src="assets/video/caroussel.ogv" type="video/ogg">
+            <source src="assets/video/caroussel.mp4" type="video/mp4">
         </video>
     </div>
 
