--- a/particle_dark/index.html
+++ b/particle_dark/index.html
@@ -568,7 +568,7 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                                 <i class="fa fa-envelope-o" aria-hidden="true"></i>
                             </div>
                             <div class="info-text wow fadeIn animated">
-                                <p>contact@morman.fr</p>
+                                <a href="mailto:contact@morman.fr">contact@morman.fr</a>
                             </div>
                         </div>
                         <div class="info-line">
